[tool.poetry]
name = "pornhub_api"
version = "0.1.0"
description = "Simple lib to work with pornhub API"
authors = ["Misha Bystrov <drudkhmisha@gmail.com>"]
packages = [
    { include = "api_engine" },
]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.4"

[tool.poetry.scripts]
phb_api = "api_engine.core.pornhub_api:main"
run_tests = "api_engine.tests.unit_test:main"


[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

