[tool.poetry]
name = "api_for_pornhub"
version = "0.1.2"
description = "Simple lib to work with pornhub API"
authors = ["Misha Bystrov <drudkhmisha@gmail.com>"]
packages = [
    { include = "src" },
]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.4"
jsonschema = "^3.2.0"
pytest = "^6.2.2"

[tool.poetry.scripts]
phb_api = "src.api_for_pornhub:main"
run-tests = "src.tests.unit_test:main"


[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

